--- a/package.json
+++ b/package.json
@@ -37,27 +37,24 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^8.2.14",
-    "@angular/common": "^8.2.14",
-    "@angular/compiler": "^8.2.14",
-    "@angular/core": "^8.2.14",
-    "@angular/forms": "^8.2.14",
-    "@angular/platform-browser": "^8.2.14",
-    "@angular/platform-browser-dynamic": "^8.2.14",
-    "@angular/router": "^8.2.14",
+    "@angular/animations": "^9.1.9",
+    "@angular/common": "^9.1.9",
+    "@angular/compiler": "^9.1.9",
+    "@angular/core": "^9.1.9",
+    "@angular/forms": "^9.1.9",
+    "@angular/platform-browser": "^9.1.9",
+    "@angular/platform-browser-dynamic": "^9.1.9",
+    "@angular/router": "^9.1.9",
     "@auth0/auth0-spa-js": "^1.6.3",
-    "@clr/angular": "^2.3.6",
-    "@clr/icons": "2.3.6",
-    "@clr/ui": "2.3.6",
+    "@clr/angular": "^3.1.3",
+    "@clr/icons": "3.1.3",
+    "@clr/ui": "3.1.3",
     "@erp/scss": "file:libs/scss",
     "@godaddy/terminus": "^4.3.1",
     "@nest-modules/mailer": "^1.1.3",
-    "@nestjs/common": "^6.11.5",
-    "@nestjs/core": "^6.11.5",
     "@nestjs/graphql": "^6.5.4",
     "@nestjs/jwt": "^6.1.1",
     "@nestjs/passport": "^6.1.1",
-    "@nestjs/platform-express": "^6.11.5",
     "@nestjs/terminus": "^6.5.2",
     "@nestjs/typeorm": "^6.1.2",
     "@ngx-translate/core": "~11.0.0",
@@ -65,7 +62,6 @@
     "@nrwl/angular": "8.12.2",
     "@types/node-cron": "^2.0.2",
     "@types/request-promise": "^4.1.45",
-    "@webcomponents/custom-elements": "^1.3.2",
     "apollo-angular": "^1.8.0",
     "apollo-angular-link-http": "^1.9.0",
     "apollo-cache-inmemory": "^1.6.5",
@@ -106,33 +102,38 @@
     "pg": "^7.18.1",
     "react": "16.12.0",
     "react-dom": "16.12.0",
-    "reflect-metadata": "^0.1.12",
     "request-promise": "^4.2.5",
-    "rxjs": "~6.5.4",
     "safe-pipe": "^0.3.0",
     "soap": "^0.30.0",
     "styled-components": "5.0.1",
     "tns-core-modules": "~6.3.2",
+    "tslib": "^1.10.0",
     "type-graphql": "0.17.6",
     "typeorm": ">=0.2.21",
     "xmlbuilder": "^13.0.2",
-    "zone.js": "^0.10.2",
-    "nativescript-pdf-view": "^2.1.0"
+    "zone.js": "~0.10.2",
+    "nativescript-pdf-view": "^2.1.0",
+    "@nestjs/common": "^7.0.0",
+    "@nestjs/core": "^7.0.0",
+    "@nestjs/platform-express": "^7.0.0",
+    "reflect-metadata": "^0.1.13",
+    "rimraf": "^3.0.2",
+    "rxjs": "^6.5.4",
+    "@clr/core": "^3.0.0",
+    "@webcomponents/webcomponentsjs": "^2.0.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.803.24",
-    "@angular-devkit/build-ng-packagr": "^0.803.24",
-    "@angular/cli": "8.3.24",
-    "@angular/compiler-cli": "^8.2.14",
-    "@angular/language-service": "^8.2.14",
+    "@angular-devkit/build-angular": "~0.901.7",
+    "@angular-devkit/build-ng-packagr": "~0.901.7",
+    "@angular/cli": "9.1.7",
+    "@angular/compiler-cli": "^9.1.9",
+    "@angular/language-service": "^9.1.9",
     "@babel/preset-react": "7.8.3",
     "@graphql-codegen/cli": "^1.12.1",
     "@graphql-codegen/typescript": "1.12.1",
     "@graphql-codegen/typescript-apollo-angular": "1.12.1",
     "@graphql-codegen/typescript-operations": "1.12.1",
-    "@nestjs/schematics": "^6.9.3",
     "@nestjs/swagger": "^4.2.4",
-    "@nestjs/testing": "^6.11.5",
     "@nrwl/cypress": "8.12.2",
     "@nrwl/jest": "8.12.2",
     "@nrwl/nest": "8.12.2",
@@ -143,37 +144,24 @@
     "@nstudio/xplat": "8.1.2",
     "@testing-library/react": "9.4.0",
     "@types/auth0": "^2.20.0",
-    "@types/express": "^4.17.2",
-    "@types/jest": "^25.1.1",
     "@types/jsreport-core": "^1.5.1",
-    "@types/node": "~13.7.0",
     "@types/passport-jwt": "^3.0.3",
     "@types/react": "16.9.19",
     "@types/react-dom": "16.9.5",
     "@types/styled-components": "4.4.2",
-    "@types/supertest": "^2.0.7",
-    "codelyzer": "~5.2.1",
+    "codelyzer": "^5.1.2",
     "copy-webpack-plugin": "^5.1.1",
     "cypress": "3.8.3",
     "dotenv": "8.2.0",
-    "eslint": "6.8.0",
     "generate-package-json-webpack-plugin": "^1.0.1",
-    "jest": "25.1.0",
     "jest-preset-angular": "^7.1.1",
-    "ng-packagr": "^5.7.1",
+    "ng-packagr": "^9.0.0",
     "nodemon": "^2.0.2",
-    "prettier": "1.19.1",
     "serverless-offline": "^5.12.1",
     "serverless-plugin-warmup": "^4.8.0",
-    "supertest": "^4.0.2",
     "swagger-ui-express": "^4.1.3",
-    "ts-jest": "25.2.0",
-    "ts-node": "~8.6.2",
-    "tsconfig-paths": "^3.7.0",
-    "tsickle": "^0.38.0",
     "tslint": "~6.0.0",
     "typedoc": "^0.16.9",
-    "typescript": "~3.5.3",
     "@nstudio/nativescript-angular": "8.1.2",
     "@nstudio/nativescript": "8.1.2",
     "@nstudio/angular": "8.1.2",
@@ -196,7 +184,27 @@
     "karma-coverage-istanbul-reporter": "~2.1.1",
     "karma-jasmine-html-reporter": "^1.5.2",
     "protractor": "~5.4.0",
-    "@nrwl/angular": "8.12.2"
+    "@nrwl/angular": "8.12.2",
+    "@nestjs/cli": "^7.0.0",
+    "@nestjs/schematics": "^7.0.0",
+    "@nestjs/testing": "^7.0.0",
+    "@types/express": "^4.17.3",
+    "@types/jest": "25.2.3",
+    "@types/node": "^13.9.1",
+    "@types/supertest": "^2.0.8",
+    "@typescript-eslint/eslint-plugin": "3.0.2",
+    "@typescript-eslint/parser": "3.0.2",
+    "eslint": "7.1.0",
+    "eslint-config-prettier": "^6.10.0",
+    "eslint-plugin-import": "^2.20.1",
+    "jest": "26.0.1",
+    "prettier": "^1.19.1",
+    "supertest": "^4.0.2",
+    "ts-jest": "26.1.0",
+    "ts-loader": "^6.2.1",
+    "ts-node": "^8.6.2",
+    "tsconfig-paths": "^3.9.0",
+    "typescript": "^3.7.4"
   },
   "engines": {
     "node": "10.x"
