--- a/clients/web/package.json
+++ b/clients/web/package.json
@@ -4,6 +4,7 @@
   "version": "0.0.1",
   "scripts": {
     "dev": "cross-env PORT=5000 sapper dev",
+    "watch:css": "postcss src/assets/global.pcss -o static/global.css -w",
     "build": "sapper build --legacy",
     "export": "sapper export --legacy",
     "prettier": "prettier --write ./**/*.svelte",
@@ -30,17 +31,30 @@
     "@babel/preset-env": "^7.0.0",
     "@babel/runtime": "^7.0.0",
     "@graphql-codegen/cli": "1.17.8",
+    "@graphql-codegen/fragment-matcher": "1.17.8",
+    "@graphql-codegen/introspection": "1.17.8",
+    "@graphql-codegen/typescript": "1.17.8",
+    "@graphql-codegen/typescript-document-nodes": "1.17.8",
+    "@graphql-codegen/typescript-graphql-files-modules": "1.17.8",
+    "@graphql-codegen/typescript-operations": "1.17.8",
     "@rollup/plugin-babel": "^5.0.0",
     "@rollup/plugin-commonjs": "^14.0.0",
     "@rollup/plugin-node-resolve": "^8.0.0",
     "@rollup/plugin-replace": "^2.2.0",
     "@rollup/plugin-typescript": "^6.0.0",
+    "@tailwindcss/typography": "^0.2.0",
     "@tsconfig/svelte": "^1.0.10",
     "@types/compression": "^1.7.0",
     "@types/node": "^14.11.1",
     "@types/polka": "^0.5.1",
+    "autoprefixer": "^10.0.1",
     "cross-env": "7.0.2",
-    "prettier" : "^2.1.2",
+    "cssnano": "^4.1.10",
+    "postcss-cli": "^8.1.0",
+    "postcss-import": "^12.0.1",
+    "postcss-load-config": "^3.0.0",
+    "postcss-preset-env": "^6.7.0",
+    "prettier": "^2.1.2",
     "prettier-plugin-svelte": "^1.4.0",
     "rollup": "^2.3.4",
     "rollup-plugin-svelte": "^6.0.0",
@@ -48,14 +62,9 @@
     "sapper": "^0.28.0",
     "svelte": "^3.17.3",
     "svelte-check": "^1.0.46",
-    "svelte-preprocess": "^4.3.0",
+    "svelte-preprocess": "^4.5.1",
+    "tailwindcss": "^1.9.2",
     "tslib": "^2.0.1",
-    "typescript": "^4.0.3",
-    "@graphql-codegen/typescript": "1.17.8",
-    "@graphql-codegen/typescript-operations": "1.17.8",
-    "@graphql-codegen/typescript-graphql-files-modules": "1.17.8",
-    "@graphql-codegen/typescript-document-nodes": "1.17.8",
-    "@graphql-codegen/fragment-matcher": "1.17.8",
-    "@graphql-codegen/introspection": "1.17.8"
+    "typescript": "^4.0.3"
   }
 }
