Can deploy API to Heroku (#7)
* api can be deployed to heroku

* build scripts to deploy the web app too

--- a/clients/web/package.json
+++ b/clients/web/package.json
@@ -3,14 +3,20 @@
   "description": "TODO",
   "version": "0.0.1",
   "scripts": {
-    "dev": "cross-env PORT=5000 sapper dev",
-    "watch:css": "postcss src/assets/global.pcss -o static/global.css -w",
-    "build": "sapper build --legacy",
-    "export": "sapper export --legacy",
+    "expor:sappert": "sapper export --legacy",
     "prettier": "prettier --write ./**/*.svelte",
-    "start": "node __sapper__/build",
     "validate": "svelte-check --ignore src/node_modules/@sapper",
-    "generate": "graphql-codegen --config codegen.yml"
+    "generate": "graphql-codegen --config codegen.yml",
+    "dev": "run-p watch:*",
+    "watch:css": "postcss src/assets/global.pcss -o static/global.css -w",
+    "watch:dev": "cross-env PORT=5000 sapper dev",
+    "build": "run-s build:css build:sapper",
+    "build:css": "cross-env NODE_ENV=production postcss src/assets/global.pcss -o static/global.css",
+    "build:sapper": "sapper build --legacy",
+    "start": "node __sapper__/build",
+    "cy:run": "cypress run",
+    "cy:open": "cypress open",
+    "test": "run-p --race dev cy:run"
   },
   "dependencies": {
     "body-parser": "^1.19.0",
@@ -50,6 +56,7 @@
     "cssnano": "^4.1.10",
     "dotenv": "^8.2.0",
     "graphql": "15.3.0",
+    "npm-run-all": "^4.1.5",
     "postcss-cli": "^8.1.0",
     "postcss-import": "^12.0.1",
     "postcss-load-config": "^3.0.0",
