--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "docker:build:api": "docker build -t erpjs3-api . -f api.dockerfile",
     "docker:run:api": "docker run --expose 3333 -env-file=.env -e POSTGRES_HOST=host.docker.internal -p 3333:3333 erpjs3-api",
     "format": "prettier --write \"apps/**/*.ts\" \"libs/**/*.ts\"",
+    "generate-db" : "npx typeorm-model-generator -h localhost -d gt2 -u postgres -x Coggel86 -e postgres -o ./apps/api/src/generated -s public",
     "keycloak": "docker run -p 8080:8080 -e KEYCLOAK_USER=admin -e KEYCLOAK_PASSWORD=admin quay.io/keycloak/keycloak:11.0.2",
     "typeorm-migration": "./node_modules/.bin/typeorm migration:create -d apps/api/src/app/migrations -n",
     "pg": "docker run --rm --name pg-docker -e POSTGRES_PASSWORD=Coggel86 -e POSTGRES_DB=gt2 -d -p 5432:5432 postgres:12",
