Refactor DB to support referencing User as the Update Operator (#15)
* refactor started

* WIP

* DB can be created

* can boot

* updated user is required!

* session like a boss

* technical user migrations

* remove console.log

--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "docker:build:api": "docker build -t erpjs3-api . -f api.dockerfile",
     "docker:run:api": "docker run --expose 3333 -env-file=.env -e POSTGRES_HOST=host.docker.internal -p 3333:3333 erpjs3-api",
     "format": "prettier --write \"apps/**/*.ts\" \"libs/**/*.ts\"",
-    "generate-db" : "npx typeorm-model-generator -h localhost -d gt2 -u postgres -x Coggel86 -e postgres -o ./apps/api/src/generated -s public",
+    "generate-db" : "npx typeorm-model-generator -h localhost -d gt2 -u postgres -x Coggel86 -e postgres -o ./apps/api/src/model/generated -s public",
     "keycloak": "docker run -p 8080:8080 -e KEYCLOAK_USER=admin -e KEYCLOAK_PASSWORD=admin quay.io/keycloak/keycloak:11.0.2",
     "typeorm-migration": "./node_modules/.bin/typeorm migration:create -d apps/api/src/app/migrations -n",
     "pg": "docker run --rm --name pg-docker -e POSTGRES_PASSWORD=Coggel86 -e POSTGRES_DB=gt2 -d -p 5432:5432 postgres:12",
@@ -36,6 +36,7 @@
     "@nestjs/platform-express": "^7.0.0",
     "@nestjs/typeorm": "^7.1.4",
     "apollo-server-express": "^2.18.2",
+    "cls-hooked": "^4.2.2",
     "deep-equal": "^2.0.4",
     "graphql": "^15.3.0",
     "graphql-tools": "^6.2.4",
