--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "author": "",
   "private": true,
-  "license": "PRIVATE",
+  "license": "UNLICENSED",
   "scripts": {
     "api:dev": "nest start --watch api",
     "prebuild": "rimraf dist",
@@ -59,11 +59,9 @@
     "@types/supertest": "^2.0.8",
     "@typescript-eslint/eslint-plugin": "3.9.1",
     "@typescript-eslint/parser": "3.9.1",
-    "copy-webpack-plugin": "^6.4.1",
     "eslint": "7.7.0",
     "eslint-config-prettier": "^6.10.0",
     "eslint-plugin-import": "^2.20.1",
-    "generate-package-json-webpack-plugin": "^2.1.2",
     "jest": "26.4.2",
     "prettier": "^1.19.1",
     "supertest": "^4.0.2",
