--- a/clients/admin/package.json
+++ b/clients/admin/package.json
@@ -35,6 +35,7 @@
     "svelte-apollo": "^0.4.0",
     "svelte-check": "^1.1.28",
     "svelte-forms": "^1.1.2",
+    "svelte-i18n": "^3.3.0",
     "svelte-preprocess": "^4.0.8",
     "svelte-routing": "^1.5.0",
     "tailwindcss": "^2.0.2",
