update to the latest nestjs version

--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "docker:build:api": "docker build -t erpjs3-api . -f api.dockerfile",
     "docker:run:api": "docker run --expose 3333 -env-file=.env -e POSTGRES_HOST=host.docker.internal -p 3333:3333 erpjs3-api",
     "format": "prettier --write \"apps/**/*.ts\" \"libs/**/*.ts\"",
-    "generate-db" : "npx typeorm-model-generator -h localhost -d gt2 -u postgres -x Coggel86 -e postgres -o ./apps/api/src/model/generated -s public",
+    "generate-db": "npx typeorm-model-generator -h localhost -d gt2 -u postgres -x Coggel86 -e postgres -o ./apps/api/src/model/generated -s public",
     "keycloak": "docker run -p 8080:8080 -e KEYCLOAK_USER=admin -e KEYCLOAK_PASSWORD=admin quay.io/keycloak/keycloak:11.0.2",
     "typeorm-migration": "./node_modules/.bin/typeorm migration:create -d apps/api/src/app/migrations -n",
     "typeorm-migration-generate": "./node_modules/.bin/typeorm migration:generate -d apps/api/src/app/migrations -n",
@@ -27,15 +27,16 @@
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./apps/api/test/jest-e2e.json",
+    "update": "nest update",
     "web:dev": "(cd clients/web/ && yarn dev)"
   },
   "dependencies": {
-    "@nestjs/common": "^7.0.0",
-    "@nestjs/config": "^0.5.0",
-    "@nestjs/core": "^7.0.0",
-    "@nestjs/graphql": "^7.7.0",
-    "@nestjs/platform-express": "^7.0.0",
-    "@nestjs/typeorm": "^7.1.4",
+    "@nestjs/common": "^7.6.15",
+    "@nestjs/config": "^0.6.3",
+    "@nestjs/core": "^7.6.15",
+    "@nestjs/graphql": "^7.10.3",
+    "@nestjs/platform-express": "^7.6.15",
+    "@nestjs/typeorm": "^7.1.5",
     "apollo-server-express": "^2.18.2",
     "cls-hooked": "^4.2.2",
     "deep-equal": "^2.0.4",
