--- a/clients/mobile/package.json
+++ b/clients/mobile/package.json
@@ -18,16 +18,16 @@
   "devDependencies": {
     "@nativescript/android": "7.0.0",
     "@nativescript/ios": "7.0.3",
-    "apollo-client": "2.6.10",
     "apollo-cache-inmemory": "1.6.6",
+    "apollo-client": "2.6.10",
+    "apollo-link": "1.2.14",
     "apollo-link-http": "1.5.17",
-    "apollo-link" : "1.2.14",
+    "env-cmd": "10.1.0",
     "svelte": "~3.24.1",
     "svelte-loader-hot": "~0.3.1",
     "svelte-native-preprocessor": "^0.2.0",
     "svelte-preprocess": "^4.0.8",
-    "typescript": "~4.0.2",
-    "env-cmd": "10.1.0"
+    "typescript": "~4.0.2"
   },
   "scripts": {
     "dev": "env-cmd ns preview"
