--- a/clients/mobile/package.json
+++ b/clients/mobile/package.json
@@ -4,20 +4,20 @@
   "templateType": "App template",
   "author": "David Pershouse (https://github.com/halfnelson)",
   "version": "7.0.0",
-  "main": "app.js",
+  "main": "./app/app.ts",
   "description": "Blank template for Nativescript application using Svelte",
   "license": "Apache-2.0",
   "repository": "https://github.com/halfnelson/svelte-native-template",
   "dependencies": {
-    "@nativescript/core": "~7.0.0",
+    "@nativescript/core": "~8.0.0",
     "@nativescript/theme": "~2.3.3",
-    "@nativescript/webpack": "3.0.0",
     "nativescript-oauth2": "^3.0.1",
     "svelte-native": "~0.9.1"
   },
   "devDependencies": {
-    "@nativescript/android": "7.0.0",
-    "@nativescript/ios": "7.0.3",
+    "@nativescript/android": "8.0.0",
+    "@nativescript/ios": "8.0.0",
+    "@nativescript/webpack": "~5.0.0-beta.0",
     "apollo-cache-inmemory": "1.6.6",
     "apollo-client": "2.6.10",
     "apollo-link": "1.2.14",
