--- a/clients/mobile/package.json
+++ b/clients/mobile/package.json
@@ -36,11 +36,11 @@
     "apollo-link": "1.2.14",
     "apollo-link-http": "1.5.17",
     "env-cmd": "10.1.0",
+    "svelte": "~3.35.0",
     "svelte-loader-hot": "~0.3.1",
     "svelte-native-preprocessor": "^0.2.0",
-    "typescript": "~4.0.2",
-    "svelte": "~3.35.0",
-    "svelte-preprocess": "^4.7.0"
+    "svelte-preprocess": "^4.7.0",
+    "typescript": "~4.0.2"
   },
   "scripts": {
     "dev": "env-cmd ns preview"
