--- a/clients/mobile/package.json
+++ b/clients/mobile/package.json
@@ -1,37 +1,50 @@
 {
-  "name": "tns-template-blank-svelte",
-  "displayName": "Blank Svelte",
+  "name": "erpjs-mobile",
+  "displayName": "ERPJS Mobile Application",
   "templateType": "App template",
-  "author": "David Pershouse (https://github.com/halfnelson)",
-  "version": "7.0.0",
-  "main": "app.js",
+  "author": "NašeÚkoly.CZ s.r.o.",
+  "version": "8.0.2",
+  "main": "./app/app.ts",
   "description": "Blank template for Nativescript application using Svelte",
   "license": "Apache-2.0",
   "repository": "https://github.com/halfnelson/svelte-native-template",
+  "publishConfig": {
+    "access": "public"
+  },
+  "files": [
+    "app",
+    "App_Resources",
+    "tools",
+    "hooks",
+    "!tools/assets",
+    ".editorconfig",
+    "tsconfig.json",
+    "svelte.config.js"
+  ],
   "dependencies": {
-    "@nativescript/core": "~7.0.0",
+    "@nativescript/core": "~8.0.0",
     "@nativescript/theme": "~2.3.3",
-    "@nativescript/webpack": "3.0.0",
     "nativescript-oauth2": "^3.0.1",
-    "svelte-native": "~0.9.1"
+    "svelte-native": "~0.9.5"
   },
   "devDependencies": {
-    "@nativescript/android": "7.0.0",
-    "@nativescript/ios": "7.0.3",
-    "apollo-client": "2.6.10",
+    "@nativescript/android": "8.0.0",
+    "@nativescript/ios": "8.0.0",
+    "@nativescript/webpack": "~5.0.0-beta.0",
     "apollo-cache-inmemory": "1.6.6",
+    "apollo-client": "2.6.10",
+    "apollo-link": "1.2.14",
     "apollo-link-http": "1.5.17",
-    "apollo-link" : "1.2.14",
-    "svelte": "~3.24.1",
+    "env-cmd": "10.1.0",
+    "svelte": "~3.35.0",
     "svelte-loader-hot": "~0.3.1",
     "svelte-native-preprocessor": "^0.2.0",
-    "svelte-preprocess": "^4.0.8",
-    "typescript": "~4.0.2",
-    "env-cmd": "10.1.0"
+    "svelte-preprocess": "^4.7.0",
+    "typescript": "~4.0.2"
   },
   "scripts": {
     "dev": "env-cmd ns preview"
   },
-  "gitHead": "c06800e52ee1a184ea2dffd12a6702aaa43be4e3",
+  "private": "true",
   "readme": "NativeScript Application"
 }
