--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -37,4 +37,4 @@ jobs:
       - run: yarn --frozen-lockfile
       - run: yarn build api
       - run: yarn test api
-      - run: (cd clients/admin && yarn && yarn build && yarn test)
+      - run: (cd clients/admin && yarn && yarn build && yarn svelte-check && yarn test)
