Issue 27 add svelte check for the clients (#31)
* remove circleci

* fix the github workflow

* add the svelte-check

* fixes

* half of the errors fixed

* last 10 bugs

* all svelte typescript bugs fixed

--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -40,4 +40,4 @@ jobs:
       - run: yarn --frozen-lockfile
       - run: yarn build api
       - run: yarn test api
-      - run: (cd clients/admin && yarn && yarn build && yarn test)
+      - run: (cd clients/admin && yarn && yarn build && yarn svelte-check && yarn test)
