--- a/clients/admin/package.json
+++ b/clients/admin/package.json
@@ -4,6 +4,7 @@
     "build": "snowpack build",
     "generate": "graphql-codegen --config codegen.yml",
     "prettier": "prettier --write --plugin-search-dir=. \"src/**/*.svelte\" \"src/**/*.ts\"",
+    "prettier:check": "prettier --check --plugin-search-dir=. \"src/**/*.svelte\" \"src/**/*.ts\"",
     "svelte-check": "svelte-check",
     "test": "cross-env MOCK=mock web-test-runner \"src/**/*.test.ts\""
   },
