--- a/clients/admin/tsconfig.json
+++ b/clients/admin/tsconfig.json
@@ -2,10 +2,11 @@
   "include": ["src", "types"],
   "compilerOptions": {
     "module": "esnext",
-    "target": "esnext",
+    "target": "es2019",
     "moduleResolution": "node",
     "jsx": "preserve",
     "baseUrl": "./",
+    "types": ["svelte", "mocha"],
     /* paths - import rewriting/resolving */
     "paths": {
       // If you configured any Snowpack aliases, add them here.
