--- a/clients/admin/package.json
+++ b/clients/admin/package.json
@@ -1,6 +1,7 @@
 {
   "scripts": {
     "start": "snowpack dev",
+    "mock": "cross-env MOCK=mock snowpack dev",
     "build": "snowpack build",
     "generate": "graphql-codegen --config codegen.yml",
     "prettier": "prettier --write --plugin-search-dir=. \"src/**/*.svelte\" \"src/**/*.ts\"",
@@ -51,7 +52,7 @@
     "graphql": "^15.4.0",
     "graphql-tag": "^2.11.0",
     "keycloak-js": "^12.0.4",
-    "mock-apollo-client": "^1.0.0",
+    "mock-apollo-client": "^1.1.0",
     "postcss": "7",
     "postcss-cli": "7.1.2",
     "prettier": "^2.2.1",
