Issue 66 introduce storybook (#68)
Adding storybook & localazy, removing some duplicated code, fixing code thanks to the storybook, adding tests.
This should be a base for a new PR that will show how to add basic CRUD screens.

Added storybook based on https://github.com/rodgco/svelte-template. Please note there are currently some drawbacks:

?. cannot be used in the HTML part of a component; recent changes at least allow it to be use in the <script> part
looks like JavaScript is actually used in the stories
fragments do not work correctly in our mocking scenario (tests + storybook), might be related to Mike-Gibson/mock-apollo-client#24

--- a/clients/admin/package.json
+++ b/clients/admin/package.json
@@ -1,18 +1,23 @@
 {
   "scripts": {
     "start": "snowpack dev",
+    "mock": "cross-env MOCK=mock snowpack dev",
     "build": "snowpack build",
     "generate": "graphql-codegen --config codegen.yml",
     "prettier": "prettier --write --plugin-search-dir=. \"src/**/*.svelte\" \"src/**/*.ts\"",
     "prettier:check": "prettier --check --plugin-search-dir=. \"src/**/*.svelte\" \"src/**/*.ts\"",
-    "svelte-check": "svelte-check",
-    "test": "cross-env MOCK=mock web-test-runner \"src/**/*.test.ts\""
+    "svelte-check": "svelte-check --ignore src/stories",
+    "test": "cross-env MOCK=mock web-test-runner \"src/**/*.test.ts\"",
+    "storybook": "start-storybook -p 6006",
+    "build-storybook": "build-storybook",
+    "localazy:upload": ""
   },
   "dependencies": {
     "svelte": "^3.24.0"
   },
   "devDependencies": {
     "@apollo/client": "^3.3.7",
+    "@babel/core": "^7.13.15",
     "@carbon/charts": "^0.41.42",
     "@carbon/charts-svelte": "^0.41.42",
     "@graphql-codegen/cli": "^1.20.1",
@@ -22,7 +27,13 @@
     "@snowpack/plugin-svelte": "^3.5.0",
     "@snowpack/plugin-typescript": "^1.2.0",
     "@snowpack/web-test-runner-plugin": "^0.2.0",
+    "@storybook/addon-actions": "^6.3.0-alpha.6",
+    "@storybook/addon-essentials": "^6.3.0-alpha.6",
+    "@storybook/addon-links": "^6.3.0-alpha.6",
+    "@storybook/addon-svelte-csf": "^1.0.0",
+    "@storybook/svelte": "^6.3.0-alpha.6",
     "@tailwindcss/forms": "^0.2.1",
+    "@tailwindcss/postcss7-compat": "^2.1.0",
     "@tailwindcss/typography": "^0.4.0",
     "@testing-library/svelte": "^3.0.0",
     "@types/chai": "^4.2.13",
@@ -31,7 +42,8 @@
     "@types/snowpack-env": "^2.3.2",
     "@web/test-runner": "^0.12.0",
     "@web/test-runner-commands": "^0.4.1",
-    "autoprefixer": "^10.2.1",
+    "autoprefixer": "9",
+    "babel-loader": "^8.2.2",
     "carbon-components": "^10.30.0",
     "chai": "^4.2.0",
     "cross-env": "^7.0.3",
@@ -40,22 +52,23 @@
     "graphql": "^15.4.0",
     "graphql-tag": "^2.11.0",
     "keycloak-js": "^12.0.4",
-    "mock-apollo-client": "^1.0.0",
-    "postcss": "^8.2.4",
-    "postcss-cli": "^8.3.1",
+    "mock-apollo-client": "^1.1.0",
+    "postcss": "7",
+    "postcss-cli": "7.1.2",
     "prettier": "^2.2.1",
     "prettier-plugin-svelte": "^2.1.1",
     "ramda": "^0.27.1",
-    "svelte-spa-router": "^3.1.0",
     "snowpack": "^3.0.1",
     "snowpack-plugin-replace": "^1.0.4",
     "svelte-apollo": "^0.4.0",
     "svelte-check": "^1.1.28",
     "svelte-forms": "^1.1.2",
     "svelte-i18n": "^3.3.0",
+    "svelte-loader": "^3.1.0",
     "svelte-preprocess": "^4.0.8",
     "svelte-select": "^3.17.0",
-    "tailwindcss": "^2.0.2",
+    "svelte-spa-router": "^3.1.0",
+    "tailwindcss": "npm:@tailwindcss/postcss7-compat",
     "typescript": "^4.0.0"
   }
 }
