eventlog and mail service

--- a/.env.sample
+++ b/.env.sample
@@ -11,3 +11,8 @@ KEYCLOAK_REALM=erpjs
 TECHNICAL_USER_EMAIL=test@podhola.net
 
 CI=true
+MAIL_HOST=smtp.googlemail.com
+MAIL_PORT=465
+MAIL_SECURE=true
+MAIL_USER=test@test.com
+MAIL_PASSWORD=passswwwwd123
