--- a/clients/admin/tsconfig.json
+++ b/clients/admin/tsconfig.json
@@ -2,7 +2,7 @@
   "include": ["src", "types"],
   "compilerOptions": {
     "module": "esnext",
-    "target": "es2019",
+    "target": "esnext",
     "moduleResolution": "node",
     "jsx": "preserve",
     "baseUrl": "./",
