--- a/clients/admin/package.json
+++ b/clients/admin/package.json
@@ -51,12 +51,12 @@
     "@snowpack/plugin-svelte": "^3.5.0",
     "@snowpack/plugin-typescript": "^1.2.0",
     "@snowpack/web-test-runner-plugin": "^0.2.0",
-    "@storybook/addon-actions": "^6.2.9",
-    "@storybook/addon-essentials": "^6.2.9",
-    "@storybook/addon-links": "^6.2.9",
+    "@storybook/addon-actions": "^6.3.0-alpha.27",
+    "@storybook/addon-essentials": "^6.3.0-alpha.27",
+    "@storybook/addon-links": "^6.3.0-alpha.27",
     "@storybook/addon-postcss": "^2.0.0",
     "@storybook/addon-svelte-csf": "^1.0.0",
-    "@storybook/svelte": "^6.2.9",
+    "@storybook/svelte": "^6.3.0-alpha.27",
     "@tailwindcss/forms": "^0.2.1",
     "@tailwindcss/postcss7-compat": "^2.1.0",
     "@tailwindcss/typography": "^0.4.0",
