--- a/clients/admin/package.json
+++ b/clients/admin/package.json
@@ -77,6 +77,7 @@
     "babel-plugin-polyfill-regenerator": "^0.2.0",
     "babel-polyfill": "^6.26.0",
     "carbon-components": "^10.30.0",
+    "carbon-components-svelte": "^0.33.0",
     "chai": "^4.2.0",
     "cross-env": "^7.0.3",
     "d3": "5.x",
