--- a/clients/web/package.json
+++ b/clients/web/package.json
@@ -4,12 +4,10 @@
   "description": "EolERP micro frontends web application",
   "main": "index.js",
   "scripts": {
-    "installAll": "node process.js yarn",
-    "startMessagePod": "(cd ./svelte-message-pod && yarn build && node podlet.js)",
-    "startReceivePod": "(cd ./svelte-receive-pod && yarn build && node podlet.js)",
-    "startLayoutPod": "(cd ./snowpack-typescript && yarn build && node podlet.js)",
-    "startBaseApp": "(cd ./base-app && yarn dev)",
-    "start": "npm-run-all -p startMessagePod startReceivePod startLayoutPod startBaseApp"
+    "installAll": "node process.js \"yarn\"",
+    "admin": "(cd ./admin && yarn dev)",
+    "base-app": "(cd ./base-app && yarn dev)",
+    "start": "npm-run-all -p admin base-app"
   },
   "devDependencies": {
     "npm-run-all": "^4.1.5",
