--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -40,12 +40,12 @@ jobs:
       - run: yarn --frozen-lockfile
       - run: yarn format:check
       - run: yarn build api
-      - run: ( mv clients/admin/.eslintrc.js  clients/admin/.eslintrc__.js && yarn lint:check && mv clients/admin/.eslintrc__.js clients/admin/.eslintrc.js )
+      - run: ( mv clients/web/admin/.eslintrc.js  clients/web/admin/.eslintrc__.js && yarn lint:check && mv clients/web/admin/.eslintrc__.js clients/web/admin/.eslintrc.js )
       - run: yarn test api
-      - run: (cd clients/admin && yarn)
-      - run: (cd clients/admin && yarn build)
-      - run: (cd clients/admin && yarn lint)
-      - run: (cd clients/admin && yarn build-storybook)
-      - run: (cd clients/admin && yarn prettier:check)
-      - run: (cd clients/admin && yarn svelte-check)
-      - run: (cd clients/admin && yarn test)
+      - run: (cd clients/web/admin && yarn)
+      - run: (cd clients/web/admin && yarn build)
+      - run: (cd clients/web/admin && yarn lint)
+      - run: (cd clients/web/admin && yarn build-storybook)
+      - run: (cd clients/web/admin && yarn prettier:check)
+      - run: (cd clients/web/admin && yarn svelte-check)
+      - run: (cd clients/web/admin && yarn test)
