--- a/clients/web/general-layout/package.json
+++ b/clients/web/general-layout/package.json
@@ -2,7 +2,10 @@
   "scripts": {
     "start": "snowpack dev",
     "build": "snowpack build",
-    "test": "web-test-runner \"src/**/*.test.ts\""
+    "dev": "npm-run-all -p watch podlet",
+    "podlet": "node podlet.js",
+    "test": "web-test-runner \"src/**/*.test.ts\"",
+    "watch": "snowpack build --watch"
   },
   "dependencies": {
     "svelte": "^3.37.0",
@@ -24,7 +27,8 @@
     "@web/test-runner": "^0.13.3",
     "carbon-components-svelte": "^0.12.0",
     "chai": "^4.3.4",
-    "snowpack": "^3.3.7",
+    "npm-run-all": "^4.1.5",
+    "snowpack": "~3.0.1",
     "svelte-preprocess": "^4.7.2",
     "typescript": "^4.2.4"
   }
