--- a/clients/web/package.json
+++ b/clients/web/package.json
@@ -7,7 +7,8 @@
     "installAll": "node process.js \"yarn\"",
     "admin": "(cd ./admin && yarn dev)",
     "base-app": "(cd ./base-app && yarn dev)",
-    "start": "npm-run-all -p admin base-app"
+    "general-layout": "(cd ./general-layout && yarn dev)",
+    "start": "npm-run-all -p general-layout admin base-app"
   },
   "devDependencies": {
     "npm-run-all": "^4.1.5",
