--- a/clients/web/general-layout/package.json
+++ b/clients/web/general-layout/package.json
@@ -28,7 +28,7 @@
     "carbon-components-svelte": "^0.12.0",
     "chai": "^4.3.4",
     "npm-run-all": "^4.1.5",
-    "snowpack": "~3.0.1",
+    "snowpack": "^3.3.7",
     "svelte-preprocess": "^4.7.2",
     "typescript": "^4.2.4"
   }
