--- a/clients/web/admin/package.json
+++ b/clients/web/admin/package.json
@@ -2,8 +2,9 @@
   "scripts": {
     "start": "snowpack dev",
     "mock": "cross-env MOCK=mock snowpack dev",
-    "watch": "snowpack build --watch",
+    "watch": "nodemon --watch src \"snowpack build\"",
     "podlet": "node podlet.js",
+    "clean": "rimraf node_modules/.cache/snowpack",
     "dev": "npm-run-all -p watch podlet",
     "build": "cross-env NODE_ENV=production snowpack build",
     "generate": "graphql-codegen --config codegen.yml",
@@ -97,6 +98,7 @@
     "keycloak-js": "^12.0.4",
     "merge-deep": "^3.0.3",
     "mock-apollo-client": "^1.1.0",
+    "nodemon": "^2.0.7",
     "npm-run-all": "^4.1.5",
     "postcss": "^8",
     "postcss-cli": "^8.3.1",
@@ -105,6 +107,7 @@
     "prettier": "^2.2.1",
     "prettier-plugin-svelte": "^2.1.1",
     "ramda": "^0.27.1",
+    "rimraf": "^3.0.2",
     "snowpack": "^3.0.1",
     "snowpack-plugin-replace": "^1.0.4",
     "svelte-check": "^1.1.28",
