--- a/clients/web/general-layout/package.json
+++ b/clients/web/general-layout/package.json
@@ -2,11 +2,11 @@
   "scripts": {
     "start": "snowpack dev",
     "build": "snowpack build",
-    "clean": "rimraf node_modules/.cache/.snowpack",
+    "clean": "rimraf node_modules/.cache/snowpack",
     "dev": "npm-run-all -p watch podlet",
     "podlet": "node podlet.js",
     "test": "web-test-runner \"src/**/*.test.ts\"",
-    "watch": "snowpack build --watch"
+    "watch": "nodemon --watch src --exec \"yarn build\""
   },
   "dependencies": {
     "svelte": "^3.37.0",
@@ -28,7 +28,9 @@
     "@web/test-runner": "^0.13.3",
     "carbon-components-svelte": "^0.12.0",
     "chai": "^4.3.4",
+    "nodemon": "^2.0.7",
     "npm-run-all": "^4.1.5",
+    "rimraf": "^3.0.2",
     "snowpack": "^3.3.7",
     "svelte-preprocess": "^4.7.2",
     "typescript": "^4.2.4"
