--- a/clients/web/base-app/package.json
+++ b/clients/web/base-app/package.json
@@ -14,7 +14,8 @@
   "dependencies": {
     "@podium/layout": "^4.5.1",
     "express": "^4.17.1",
-    "dotenv": "^10.0.0"
+    "dotenv": "^10.0.0",
+    "keycloak-js": "^12.0.4"
   },
   "devDependencies": {
     "@types/podium": "^1.0.0",
