--- a/clients/web/base-app/package.json
+++ b/clients/web/base-app/package.json
@@ -9,7 +9,12 @@
     "build": "babel --delete-dir-on-start --out-dir dist --copy-files --ignore \"**/__tests__/**,**/__mocks__/**\" --no-copy-ignored src",
     "start:dev": "nodemon dist/index.js",
     "build:dev": "tsc --watch --preserveWatchOutput",
-    "dev": "npm-run-all -p build:dev start:dev"
+    "dev": "npm-run-all -p build:dev start:dev",
+    "prettier": "prettier --write --plugin-search-dir=. \"*.ts\"",
+    "prettier:check": "prettier --check --plugin-search-dir=. \"*.ts\"",
+    "svelte-check": "svelte-check --ignore \"src/stories,src/absorb\"",
+    "lint": "eslint \"./src/**/*.{js,ts}\" --resolve-plugins-relative-to . --quiet",
+    "lint:fix": "eslint --fix \"./src/**/*.{js,ts}\" --resolve-plugins-relative-to ."
   },
   "dependencies": {
     "@podium/layout": "^4.5.1",
@@ -22,7 +27,10 @@
     "@types/express": "^4.17.12",
     "nodemon": "^2.0.7",
     "npm-run-all": "^4.1.5",
+    "prettier": "^2.2.1",
+    "prettier-plugin-svelte": "^2.1.1",
     "rimraf": "^3.0.2",
+    "svelte-check": "^1.1.28",
     "typescript": "^4.3.2"
   }
 }
