--- a/clients/web/general-layout/package.json
+++ b/clients/web/general-layout/package.json
@@ -6,7 +6,12 @@
     "dev": "npm-run-all -p watch podlet",
     "podlet": "node podlet.js",
     "test": "web-test-runner \"src/**/*.test.ts\"",
-    "watch": "nodemon -e svelte,ts,js --watch src --exec \"yarn build\""
+    "watch": "nodemon -e svelte,ts,js --watch src --exec \"yarn build\"",
+    "prettier": "prettier --write --plugin-search-dir=. \"src/**/*.svelte\" \"src/**/*.ts\"",
+    "prettier:check": "prettier --check --plugin-search-dir=. \"src/**/*.svelte\" \"src/**/*.ts\"",
+    "svelte-check": "svelte-check --ignore \"src/stories,src/absorb\"",
+    "lint": "eslint \"./src/**/*.{js,ts}\" --resolve-plugins-relative-to . --quiet",
+    "lint:fix": "eslint --fix \"./src/**/*.{js,ts}\" --resolve-plugins-relative-to ."
   },
   "dependencies": {
     "svelte": "^3.37.0",
@@ -29,9 +34,12 @@
     "carbon-components-svelte": "^0.12.0",
     "chai": "^4.3.4",
     "nodemon": "^2.0.7",
+    "prettier": "^2.2.1",
+    "prettier-plugin-svelte": "^2.1.1",
     "npm-run-all": "^4.1.5",
     "rimraf": "^3.0.2",
     "snowpack": "^3.3.7",
+    "svelte-check": "^1.1.28",
     "svelte-preprocess": "^4.7.2",
     "typescript": "^4.2.4"
   }
