--- a/clients/web/general-layout/package.json
+++ b/clients/web/general-layout/package.json
@@ -41,6 +41,10 @@
     "snowpack": "^3.3.7",
     "svelte-check": "^1.1.28",
     "svelte-preprocess": "^4.7.2",
-    "typescript": "^4.2.4"
+    "typescript": "^4.2.4",
+    "@typescript-eslint/eslint-plugin": "^4.22.0",
+    "@typescript-eslint/parser": "^4.22.0",
+    "eslint": "^7.25.0",
+    "eslint-plugin-svelte3": "^3.2.0"
   }
 }
