--- a/clients/web/homepage/package.json
+++ b/clients/web/homepage/package.json
@@ -21,6 +21,8 @@
     "cors": "^2.8.5"
   },
   "devDependencies": {
+    "@carbon/charts": "^0.41.42",
+    "@carbon/charts-svelte": "^0.41.42",
     "@snowpack/plugin-dotenv": "^2.1.0",
     "@snowpack/plugin-svelte": "^3.6.1",
     "@snowpack/plugin-typescript": "^1.2.1",
@@ -30,16 +32,23 @@
     "@types/chai": "^4.2.17",
     "@types/mocha": "^8.2.2",
     "@types/snowpack-env": "^2.3.3",
+    "@types/node": "^15.3.1",
+    "@types/ramda": "^0.27.39",
     "@web/test-runner": "^0.13.3",
+    "carbon-components": "^10.30.0",
     "carbon-components-svelte": "^0.12.0",
     "chai": "^4.3.4",
+    "d3": "5.x",
     "nodemon": "^2.0.7",
     "prettier": "^2.2.1",
     "prettier-plugin-svelte": "^2.1.1",
+    "mock-apollo-client": "^1.1.0",
     "npm-run-all": "^4.1.5",
     "rimraf": "^3.0.2",
     "snowpack": "^3.3.7",
+    "snowpack-plugin-replace": "^1.0.4",
     "svelte-check": "^1.1.28",
+    "svelte-i18n": "^3.3.0",
     "svelte-preprocess": "^4.7.2",
     "typescript": "^4.2.4",
     "@typescript-eslint/eslint-plugin": "^4.22.0",
