--- a/clients/web/homepage/package.json
+++ b/clients/web/homepage/package.json
@@ -14,15 +14,16 @@
     "lint:fix": "eslint --fix \"./src/**/*.{js,ts}\" --resolve-plugins-relative-to ."
   },
   "dependencies": {
-    "svelte": "^3.37.0",
     "@podium/browser": "^1.0.0-beta.2",
     "@podium/podlet": "^4.3.3",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
-    "cors": "^2.8.5"
+    "svelte": "^3.37.0"
   },
   "devDependencies": {
     "@carbon/charts": "^0.41.42",
     "@carbon/charts-svelte": "^0.41.42",
+    "@eolerp/common": "file:.yalc/@eolerp/common",
     "@snowpack/plugin-dotenv": "^2.1.0",
     "@snowpack/plugin-svelte": "^3.7.0",
     "@snowpack/plugin-typescript": "^1.2.1",
@@ -31,19 +32,23 @@
     "@tsconfig/svelte": "^1.0.10",
     "@types/chai": "^4.2.17",
     "@types/mocha": "^8.2.2",
-    "@types/snowpack-env": "^2.3.3",
     "@types/node": "^15.3.1",
     "@types/ramda": "^0.27.39",
+    "@types/snowpack-env": "^2.3.3",
+    "@typescript-eslint/eslint-plugin": "^4.22.0",
+    "@typescript-eslint/parser": "^4.22.0",
     "@web/test-runner": "^0.13.3",
     "carbon-components": "^10.30.0",
     "carbon-components-svelte": "^0.12.0",
     "chai": "^4.3.4",
     "d3": "5.x",
+    "eslint": "^7.25.0",
+    "eslint-plugin-svelte3": "^3.2.0",
+    "mock-apollo-client": "^1.1.0",
     "nodemon": "^2.0.7",
+    "npm-run-all": "^4.1.5",
     "prettier": "^2.2.1",
     "prettier-plugin-svelte": "^2.1.1",
-    "mock-apollo-client": "^1.1.0",
-    "npm-run-all": "^4.1.5",
     "rimraf": "^3.0.2",
     "snowpack": "^3.3.7",
     "snowpack-plugin-replace": "^1.0.4",
@@ -51,9 +56,6 @@
     "svelte-i18n": "^3.3.0",
     "svelte-preprocess": "^4.7.2",
     "typescript": "^4.2.4",
-    "@typescript-eslint/eslint-plugin": "^4.22.0",
-    "@typescript-eslint/parser": "^4.22.0",
-    "eslint": "^7.25.0",
-    "eslint-plugin-svelte3": "^3.2.0"
+    "yalc": "^1.0.0-pre.53"
   }
 }
