--- a/clients/web/homepage/package.json
+++ b/clients/web/homepage/package.json
@@ -4,9 +4,11 @@
     "build": "snowpack build",
     "clean": "rimraf node_modules/.cache/snowpack",
     "dev": "npm-run-all -p watch podlet",
+    "mock": "npm-run-all -p watch:mock podlet",
     "podlet": "node podlet.js",
     "test": "web-test-runner \"src/**/*.test.ts\"",
     "watch": "nodemon -e svelte,ts,js --watch src --exec \"yarn build\"",
+    "watch:mock": "cross-env SNOWPACK_PUBLIC_MOCK=mock nodemon -e svelte,ts,js --watch src --exec \"yarn build\"",
     "prettier": "prettier --write --plugin-search-dir=. \"src/**/*.svelte\" \"src/**/*.ts\"",
     "prettier:check": "prettier --check --plugin-search-dir=. \"src/**/*.svelte\" \"src/**/*.ts\"",
     "svelte-check": "svelte-check --ignore \"src/stories,src/absorb\"",
@@ -17,6 +19,7 @@
     "@podium/browser": "^1.0.0-beta.2",
     "@podium/podlet": "^4.3.3",
     "cors": "^2.8.5",
+    "cross-env": "^7.0.3",
     "express": "^4.17.1",
     "svelte": "^3.37.0"
   },
