--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/apps/erpjs/main",
-    "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
+    "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix --resolve-plugins-relative-to .",
+    "lint:check": "eslint \"{src,apps,libs,test}/**/*.ts\" --resolve-plugins-relative-to .",
     "test": "jest",
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
