--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "erpjs",
+  "name": "erp3",
   "version": "0.0.1",
   "description": "",
   "author": "",
   "private": true,
-  "license": "UNLICENSED",
+  "license": "PRIVATE",
   "scripts": {
     "build": "nest build",
     "format": "prettier --write \"apps/**/*.ts\" \"libs/**/*.ts\"",
